tests/paczka1/small_fuzzy/40882043.err
Error in line 3: vglOP S121 17,7
Error in line 4: vglOP S991 14,0
Error in line 12: l8LK S991 99,6
Error in line 13: l8LK A167 20,2
